--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./index.css">
-    <script src="./index.js"></script>
+
 
 </head>
 
 <body>
-    <h1>我是一个标题</h1>
+    <h1>我是注册</h1>
 </body>
 
 </html>
